--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
            </div>
            <div class="product">
              <div class="heading">
-               <h1> class="product-list">Our product</h1>
+               <h1 class="product-list">Our product</h1>
                <hr>
                <h2> Find what suits you </h2>
 
