--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
              <div class="heading">
                <h1 class="product-list">Our product</h1>
                <hr>
-               <h2> Find what suits you </h2>
+               <h2> Find what suits on you </h2>
 
              </div>
 
