--- a/index.html
+++ b/index.html
@@ -30,23 +30,20 @@
           <div class="lesson">
             <div class="lesson-icon">
               <img src="https://previews.123rf.com/images/kongvector/kongvector1901/kongvector190106348/126093240-with-heart-lip-balm-isolated-in-thec-cartoon-vector-illustration.jpg">
-              <p>HTML & CSS</p>
+              <p>Lip Balm </p>
             </div>
-            <p class="txt-contents">Languages used to build and design the appearances of your websites. HTML adds the structure, and CSS styles it.</p>
           </div>
           <div class="lesson">
             <div class="lesson-icon">
               <img src="https://cdn4.iconfinder.com/data/icons/cosmetic-products-set-for-woman-makeup-or-skin-car/50/56-512.png">
-              <p>jQuery</p>
+              <p>Lip scrub</p>
             </div>
-            <p class="txt-contents">A fast, feature-rich and easy-to-use JavaScript library that handles animations and Ajax requests.</p>
           </div>
           <div class="lesson">
             <div class="lesson-icon">
               <img src="https://cdn.shopify.com/s/files/1/0011/3144/6335/products/DIYDeluxeLipGlossKitDisplay_1024x1024@2x.jpg?v=1589741624">
-              <p>Ruby</p>
+              <p>Lip Balm DIY</p>
             </div>
-            <p class="txt-contents">A dynamic, general-purpose language that is simple and productive. It is commonly used to build web applications.</p>
           </div>
           
         </div>
