--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           </div>
           <div class="lesson">
             <div class="lesson-icon">
-              <img src="https://cdn.shopify.com/s/files/1/0011/3144/6335/products/DIYDeluxeLipGlossKitDisplay_1024x1024@2x.jpg?v=1589741624">
+              <img src="https://i.pinimg.com/originals/b7/77/0a/b7770a98d80a7d909c904609b5ce9873.jpg">
               <p>Lip Balm DIY</p>
             </div>
           </div>
