--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
                 <div class="lessons">
           <div class="lesson">
             <div class="lesson-icon">
-              <img src="https://previews.123rf.com/images/ylivdesign/ylivdesign1711/ylivdesign171105764/90464890-lipstick-icon-cartoon-illustration-of-lipstick-vector-icon-for-web.jpg">
+              <img src="https://5.imimg.com/data5/SE/XI/QS/SELLER-3546615/herbal-lip-balm-500x500.jpg">
               <p>Lip Balm </p>
             </div>
           </div>
           <div class="lesson">
             <div class="lesson-icon">
-              <img src="https://cdn4.iconfinder.com/data/icons/cosmetic-products-set-for-woman-makeup-or-skin-car/50/56-512.png">
+              <img src="https://ecs7.tokopedia.net/img/cache/700/product-1/2020/7/2/batch-upload/batch-upload_9c0be0bc-beae-4991-ad97-b528547ef1fe.jpg">
               <p>Lip scrub</p>
             </div>
           </div>
