--- a/index.html
+++ b/index.html
@@ -64,7 +64,15 @@
          </div>
 
          <div class="footer">
-
+            <h2>Contact Us</h2>
+            <hr>
+            <form>
+               <p> Name </p>
+               <input>
+               <p> Email Address</p>
+               <textarea></textarea>
+               <input class="Contact-Submit"  type="Submit" value="submit">
+            </form>
          </div>
        </body>
        </html>
